# stm32customtargets

./: .gitignore  CMakeLists.txt  README.md  aci_build.py  aci_pinvalidate.py  automatic_build.py  call_make_generic_for_all.sh  custom_targets.json  make_generic_boards.py  mbed_app_template.json  target_list_f0.json  target_list_f1.json  target_list_f3.json  target_list_f4.json  target_list_g0.json  target_list_g4.json  target_list_h7.json  target_list_l0.json  target_list_l1.json  target_list_l4.json  target_list_l5.json  target_list_u5.json  target_list_wb.json  target_list_wl.json
TARGET_STM32F0/: CMakeLists.txt
TARGET_STM32F0/TARGET_GENERIC_STM32F030C8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F030R8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F070CB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F070RB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F072CB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F072RB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F072VB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F091CC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F091RC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F0/TARGET_GENERIC_STM32F091VC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103C8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103CB/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103R8/: CMakeLists.txt  PeripheralPins.c
TARGET_STM32F1/TARGET_GENERIC_STM32F103RB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103RC/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103RD/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103RE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103RG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103T8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103TB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103V8/: CMakeLists.txt  PeripheralPins.c
TARGET_STM32F1/TARGET_GENERIC_STM32F103VB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103VC/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103VD/: CMakeLists.txt  PeripheralPins.c
TARGET_STM32F1/TARGET_GENERIC_STM32F103VE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103VG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103ZC/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103ZD/: CMakeLists.txt
TARGET_STM32F1/TARGET_GENERIC_STM32F103ZE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F1/TARGET_GENERIC_STM32F103ZG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/: CMakeLists.txt
TARGET_STM32F3/TARGET_GENERIC_STM32F302C8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F302K8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F302R8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303C8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303CC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303K8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303R8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303RC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303RE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303VC/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303VE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F303ZE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F334C8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F334K8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F3/TARGET_GENERIC_STM32F334R8/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/: CMakeLists.txt
TARGET_STM32F4/TARGET_CORE2/: CMakeLists.txt  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F401CE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F401RE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F401VE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F407IE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F407VE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F407ZE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F411CE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F411RE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F411VE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F412CE/: CMakeLists.txt
TARGET_STM32F4/TARGET_GENERIC_STM32F412CG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_STM32F4/TARGET_GENERIC_STM32F412RE/: CMakeLists.txt
TARGET_STM32F4/TARGET_GENERIC_STM32F412RG/: CMakeLists.txt  (+2 more)
TARGET_STM32G0/: CMakeLists.txt
TARGET_STM32G4/: CMakeLists.txt
TARGET_STM32H7/: CMakeLists.txt
TARGET_STM32L0/: CMakeLists.txt
TARGET_STM32L1/: CMakeLists.txt
TARGET_STM32L4/: CMakeLists.txt
TARGET_STM32L5/: CMakeLists.txt
TARGET_STM32U5/: CMakeLists.txt
TARGET_STM32WB/: CMakeLists.txt
TARGET_STM32WL/: CMakeLists.txt
(+945 files in other folders)
