# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32F030C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F030R8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F070CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F070RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F072CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F072RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F072VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F091CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F091RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F091VC EXCLUDE_FROM_ALL)
