# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_GENERIC_STM32F103C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103R8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103T8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103TB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103V8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103ZC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F103ZE EXCLUDE_FROM_ALL)
