# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32F302C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F302K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F302R8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303R8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F303ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F334C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F334K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F334R8 EXCLUDE_FROM_ALL)
