# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_GENERIC_STM32F401CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F401RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F401VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F407IE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F407VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F407ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F411CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F411RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F411VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412CG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F412ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F413CH EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F413MH EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F413RH EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F413VH EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F413ZH EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429NI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F429ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439NI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F439ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F446ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F446RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F446VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F446ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469NI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32F469ZI EXCLUDE_FROM_ALL)
