# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_GENERIC_STM32G030C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G030K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G031C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G031F8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G031G8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G031K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G031Y8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G041C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G041F8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G041G8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G041K8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G041Y8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G070CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G070KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G070RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G071CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G071EB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G071GB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G071KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G071RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G081CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G081EB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G081GB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G081KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G081RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B0CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B0KE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B0RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B0VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1KE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1NE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G0B1VE EXCLUDE_FROM_ALL)
