# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32G431CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G431KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G431MB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G431RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G431VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G441CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G441KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G441MB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G441RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G441VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G471CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G471ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G471QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G471RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G471VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473PE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G473VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474PE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G474VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483PE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G483VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484PE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G484VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G491CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G491KE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G491ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G491RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G491VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G4A1CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G4A1KE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G4A1ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G4A1RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32G4A1VE EXCLUDE_FROM_ALL)
