# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32H743AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747ZI EXCLUDE_FROM_ALL)
