# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32H743AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H723VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H723ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H725AE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H725IE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H725RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H725VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H725ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H735AG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H735IG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H735RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H735VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H735ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H743ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H745ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747BI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747II EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747XI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H747ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H750IB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H750VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H750XB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H750ZB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3AIQ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3IIQ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3LIQ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3QIQ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3VIQ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32H7A3ZIQ EXCLUDE_FROM_ALL)
