# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_GENERIC_STM32L053C8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L053R8 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071CZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071KB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071KZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071RZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L071VZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L072CZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L072KZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L072RZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L072VZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L073CZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L073RZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L073VZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L082CZ EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L082KZ EXCLUDE_FROM_ALL)
