# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32L151CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151CB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151CBA EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151QC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151RB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151RBA EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151UC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151VB EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151VBA EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L151ZC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152QC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152UC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152ZC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L152ZE EXCLUDE_FROM_ALL)
