# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_GENERIC_STM32L432KC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L433CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L433RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L433VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L443CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L443RC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L443VC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L452CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L452RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L452VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L471QG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L471RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L471VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L471ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L475RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L475VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476JG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476MG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476QG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L476ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L486JG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L486QG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L486RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L486VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L486ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496AG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496QG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496WG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L496ZG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R5AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R5QI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R5VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R5ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R9AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R9VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4R9ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4S5AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4S5QI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4S5VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L4S5ZI EXCLUDE_FROM_ALL)
