# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32L552CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L552ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L552QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L552RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L552VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L552ZE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562CE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562ME EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562QE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562RE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562VE EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32L562ZE EXCLUDE_FROM_ALL)
