# Copyright (c) 2021 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32U575AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575CI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575OI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575QI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575RI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U575ZI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585AI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585CI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585OI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585QI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585RI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585VI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32U585ZI EXCLUDE_FROM_ALL)
