# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(TARGET_GENERIC_STM32WB15CC EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32WB55CG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32WB55RG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32WB55VG EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_GENERIC_STM32WB5MMG EXCLUDE_FROM_ALL)
